# cenotoo-api

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Makefile  README.md  config.py  conftest.py  dependencies.py  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci-org.yml
api/: v1.py
core/: aggregation.py  exceptions.py  filters.py  middleware.py  tracing.py  validators.py
models/: collection_models.py  common.py  organization_models.py  project_keys_models.py  project_models.py  user_models.py
routers/: auth.py  collection_keys.py  collections.py  delete_data.py  get_data.py  get_data_stats.py  health.py  organization.py  project.py  project_keys.py  send_data.py  users.py
scripts/: build.sh
services/: auth_service.py  collection_service.py  organization_service.py  project_keys_service.py  project_service.py  user_service.py
tests/: AGENTS.md  conftest.py  test_coverage_gaps.py  test_dependencies.py
tests/auth/: test_auth_service.py  test_dependencies.py
tests/core/: test_aggregation.py  test_exceptions.py  test_filters.py  test_tracing.py  test_validators.py
tests/routers/: test_auth.py  test_collection_keys.py  test_collections.py  test_delete_data.py  test_get_data.py  test_get_data_stats.py  test_get_data_stats_non_distinct.py  test_health.py  test_organization.py  test_project.py  test_project_keys.py  test_send_data.py  test_users.py
tests/services/: test_services.py  test_services_project_user.py
tests/utilities/: test_cassandra_connector.py  test_collection_utils.py  test_flink_utilities.py  test_kafka_topics.py  test_organization_utils.py  test_project_keys_utils.py  test_project_utils.py  test_schema_utils.py  test_user_utils.py
utilities/: cassandra_connector.py  collection_utils.py  flink_utilities.py  kafka_connector.py  kafka_topics.py  organization_utils.py  project_keys_utils.py  project_utils.py  schema_utils.py  user_utils.py
